--- a/src/content/posts/2024-05-22-analyzing-pey-postings-part-1/index.mdx
+++ b/src/content/posts/2024-05-22-analyzing-pey-postings-part-1/index.mdx
@@ -12,7 +12,6 @@ import Callout from '@/components/mdx/Callout.astro';
 import ImageGalleryCaption from '@/components/ImageGalleryCaption.astro';
 import { Image } from 'astro:assets';
 import ImageZoom from '@/components/mdx/ImageZoom.astro';
-import PhotoSwipe from "@/components/PhotoSwipe.astro";
 
 import peyLoginImage from './01-01-pey-login.png';
 import a1 from './01-pey-advanced-search.jpg';
@@ -55,25 +54,37 @@ The UofT PEY Co-op job board itself is located behind a login portal at [https:/
 
 All of which means that unless you're a keen student in your second year who's opted in to get access and do your PEY early, you're either in your third year or you don't have access to the job portal. As an engineering student who's just finished their third year (at the time of writing), I've had privileged access for 8 months and counting, and I've been able to save data on every single job posted on the portal since the very first day I've had access (I came prepared).
 
-<PhotoSwipe imagePaths={[
-  { src: peyLoginImage, caption: 'The PEY job board login portal at <a href="https://www.uoftengcareerportal.ca/notLoggedIn">uoftengcareerportal.ca/notLoggedIn</a>' },
-]} />
+<div class="flex text-center flex-col md:flex-row gap-4 my-6">
+  <figure class="flex-1 m-0">
+    <Image src={peyLoginImage} alt="The PEY job board login portal" class="zoom-image" />
+    <figcaption>The PEY job board login portal at [uoftengcareerportal.ca/notLoggedIn](https://www.uoftengcareerportal.ca/notLoggedIn)</figcaption>
+  </figure>
+</div>
 
 ### What you can expect from the job board
 
 The [landing page](https://uoftengcareerportal.ca/myAccount/internship/postings.htm) for the PEY Co-op job board has the same look as the one for all the cross-institutional job boards at UofT's [Career Learning Network (CLNx)](https://clnx.utoronto.ca/myAccount/dashboard.htm) and uses the same organization of elements and processes for browsing, searching for, and applying to job postings, so if you're a UofT student who's used CLNx in the past (e.g. for applying to work study positions) then you already know what it's like to experience using the PEY job board (from what I've seen on Reddit, I'm pretty sure WaterlooWorks uses the same frontend as well).
 
-<PhotoSwipe imagePaths={[
-  { src: a2, caption: 'The PEY Co-op job board landing page (Job Postings)' },
-  { src: a1, caption: "Advanced search options (Search Job Postings)" },
-]} />
+<div class="flex flex-col md:flex-row gap-4 my-6">
+  <figure class="flex-1 m-0">
+    <Image src={a2} alt="The PEY Co-op job board landing page (Job Postings)" class="zoom-image" data-zoom-src="/posts/2024-05-22-analyzing-pey-postings-part-1/01-pey-landing-page.jpg" />
+    <figcaption>The PEY Co-op job board landing page (Job Postings)</figcaption>
+  </figure>
 
+  <figure class="flex-1 m-0">
+    <Image src={a1} alt="Advanced search options (Search Job Postings)" class="zoom-image" data-zoom-src="/posts/2024-05-22-analyzing-pey-postings-part-1/01-pey-advanced-search.jpg" />
+    <figcaption>Advanced search options (Search Job Postings)</figcaption>
+  </figure>
+</div>
 
 import viewedjobs from './01-pey-viewed.jpg';
 
-<PhotoSwipe imagePaths={[
-  { src: viewedjobs, caption: 'Viewed jobs (Viewed)' },
-]} />
+<div class="flex flex-col md:flex-row gap-4 my-6">
+  <figure class="flex-1 m-0">
+    <Image src={viewedjobs} alt="Viewed jobs (Viewed)" class="zoom-image" data-zoom-src="/posts/2024-05-22-analyzing-pey-postings-part-1/01-pey-viewed.jpg" />
+    <figcaption>Viewed jobs (Viewed)</figcaption>
+  </figure>
+</div>
 
 #### Sample job postings
 
@@ -83,10 +94,17 @@ Your average PEY job postings look like the below.
   **Note**: The design on the left was used for a couple years, until the most recent redesign in late 2023 (which took place halfway through my fall semester of third year). **If you're an upcoming PEY Co-op student, job postings should look like the image on the right for you** (Edit 2024-11-14: the job board has been redesigned again, and now looks unlike either image; check out my post on 2024-2025 UofT Co-op job postings to see what they look like now).
 </Callout>
 
-<PhotoSwipe imagePaths={[
-  { src: a4, caption: "Old design for PEY job postings. One of the earliest jobs to be posted on the job board for my cohort (2T5) in 2023. Shown: ML Developer - Software Automation & Developer Infrastructure @ Cerebras" },
-  { src: a5, caption: "Current design for PEY job postings. One of the most recent jobs posted at the time of writing. Shown: Software Developer Intern @ Geotab" },
-]} />
+<div class="flex flex-col md:flex-row gap-4 my-6">
+  <figure class="flex-1 m-0">
+    <Image src={a4} alt="Old design for PEY job postings. One of the earliest jobs to be posted on the job board for my cohort (2T5) in 2023. Shown: ML Developer - Software Automation & Developer Infrastructure @ Cerebras" class="zoom-image" data-zoom-src="/posts/2024-05-22-analyzing-pey-postings-part-1/02-pey-old-posting.jpg" />
+    <figcaption>Old design for PEY job postings. One of the earliest jobs to be posted on the job board for my cohort (2T5) in 2023. Shown: ML Developer - Software Automation & Developer Infrastructure @ Cerebras</figcaption>
+  </figure>
+
+  <figure class="flex-1 m-0">
+    <Image src={a5} alt="Current design for PEY job postings. One of the most recent jobs posted at the time of writing. Shown: Software Developer Intern @ Geotab" class="zoom-image" data-zoom-src="/posts/2024-05-22-analyzing-pey-postings-part-1/02-pey-sample-posting.jpg" />
+    <figcaption>Current design for PEY job postings. One of the most recent jobs posted at the time of writing. Shown: Software Developer Intern @ Geotab</figcaption>
+  </figure>
+</div>
 
 Nothing much to look at, just some basic tables with information about the job and the company, which thankfully are simple to parse.
 
@@ -139,10 +157,17 @@ A snapshot of my local directory structure with HTML pages for saved job posting
 import isitworth from './is_it_worth_the_time.png';
 import automation from './automation.png';
 
-<PhotoSwipe imagePaths={[
-  { src: isitworth, caption: "xkcd: 'Is It Worth the Time?'" },
-  { src: automation, caption: "xkcd: 'Automation'" },
-]} />
+<div class="flex flex-col md:flex-row gap-4 my-6">
+  <figure class="flex-1 m-0">
+    <Image src={isitworth} alt="xkcd: 'Is It Worth the Time?'" class="zoom-image" data-zoom-src="/posts/2024-05-22-analyzing-pey-postings-part-1/is_it_worth_the_time.png" />
+    <figcaption>xkcd: ['Is It Worth the Time?'](https://xkcd.com/1205/)</figcaption>
+  </figure>
+
+  <figure class="flex-1 m-0">
+    <Image src={automation} alt="xkcd: 'Automation'" class="zoom-image" data-zoom-src="/posts/2024-05-22-analyzing-pey-postings-part-1/automation.png" />
+    <figcaption>xkcd: ['Automation'](https://xkcd.com/1319/)</figcaption>
+  </figure>
+</div>
 
 ##### ***Is it possible to automate the whole process of saving data for job postings?***
 
