tmp: start adding svg thumbnails

--- a/src/content/posts/2025-01-25-uoft-ece-upper-year-course-planning-tips/index.mdx
+++ b/src/content/posts/2025-01-25-uoft-ece-upper-year-course-planning-tips/index.mdx
@@ -4,7 +4,9 @@ description: "What upper-year courses you should take as a UofT ECE student (and
 date: 2025-01-25
 slug: "uoft-ece-upper-year-course-reviews"
 tags: ['university', 'education', 'advice']
-image: './00-thumbnail.png'
+thumbnail_icon: 'cil:apps-settings'
+thumbnail_color: 'text-blue-100'
+thumbnail_bg: 'bg-blue-950'
 authors: ['sadman']
 ---
 
