--- a/src/content/posts/2025-03-23-ece496-timeline/index.mdx
+++ b/src/content/posts/2025-03-23-ece496-timeline/index.mdx
@@ -4,7 +4,9 @@ description: "A comprehensive timeline of the UofT engineering capstone design p
 date: 2025-03-23
 slug: "ece496-timeline"
 tags: ['university']
-image: './00-thumbnail.png'
+thumbnail_icon: 'fa6-solid:timeline'
+thumbnail_color: 'text-blue-100'
+thumbnail_bg: 'bg-blue-950'
 authors: ['sadman']
 ---
 
