tmp: use uploaded svg as post thumbnails instead of png

--- a/src/content/posts/2025-03-23-ece496-timeline/index.mdx
+++ b/src/content/posts/2025-03-23-ece496-timeline/index.mdx
@@ -5,6 +5,7 @@ date: 2025-03-23
 slug: "ece496-timeline"
 tags: ['university']
 image: './00-thumbnail.png'
+thumbnail: './00-thumbnail.svg'
 authors: ['sadman']
 ---
 
