style(TimelineEntry): make timeline progress more clear

--- a/src/content/posts/2025-03-23-ece496-timeline/index.mdx
+++ b/src/content/posts/2025-03-23-ece496-timeline/index.mdx
@@ -219,6 +219,7 @@ There's not much information available online about what the course is actually 
     date="Week 29" 
     status="planned"
     subtitle="early April 2026"
+    lastEntry="true"
   >
     ### Showcase your project at the ECE Capstone Design Fair!
 
