--- a/src/content/posts/2025-04-01-be-more-whimsical/index.mdx
+++ b/src/content/posts/2025-04-01-be-more-whimsical/index.mdx
@@ -1,8 +1,8 @@
 ---
-title: "Add more play to your life"
-description: "Make the little things in life more enjoyable by adding a little whimsy."
+title: "Find joy in the boring bits of life"
+description: "Embrace whimsy in your everyday."
 date: 2025-04-01
-slug: "add-more-play-to-your-life"
+slug: "find-joy-in-the-boring-bits-of-life"
 tags: ['life', 'advice', 'april-cools']
 image: './00-thumbnail.png'
 authors: ['sadman']
@@ -13,9 +13,10 @@ import TimelineEntry from '@/components/mdx/TimelineEntry.astro';
 import { Image } from 'astro:assets';
 import Callout from '@/components/mdx/Callout.astro';
 import Marquee from '@/components/mdx/Marquee.astro';
+import RedditPost from '@/components/mdx/RedditPost.astro';
 
 <Callout type="info" icon="lucide:smile" classes="border-green-950/100 bg-green-100 dark:border-green-100/100 dark:bg-green-950">
-  We only have such limited time in which to live our life. <br/>**Why not make it a little more fun?**
+  We only have so much time to live our lives. <br/>**Why not make it a little more fun?**
 </Callout>
 
 <figure>
@@ -83,53 +84,149 @@ import Marquee from '@/components/mdx/Marquee.astro';
 },
 ]} />
 </div>
-  <figcaption>How others add a little play to their lives.</figcaption>
+  <figcaption>How others have added a little play to their lives.</figcaption>
 </figure>
 
 <Callout type="info" icon="lucide:dog" classes="border-amber-950/100 bg-amber-100 dark:border-amber-100/100 dark:bg-amber-950">
-  **This is an [April Cools' Club](https://www.aprilcools.club/) post.** 
+  **This is an [April Cools](https://www.aprilcools.club/) post.** 
   
-  April Cools is all about producing genuine content that's very different from your normal produced content. 
+  April Cools' Club is all about producing genuine content that's very different from your normal produced content. 
   
-  I usually use this blog to write about technical topics in (software) engineering, but I'd like to take this opportunity to write something a bit more reflective.
+  I usually use this blog to write about technical topics in (software) engineering, but given the occasion I'd like to take this opportunity to write something a bit more contemplative.
 </Callout>
 
 ---
 
-## Most of life is boring.
+## Most of life is boring
 
 Some of life can be exciting. But most of it is boring.
 
 - Morning routines are boring (wake up, brush teeth, eat breakfast, commute to work). 
 - Most of work is boring (if your day job is amazing every day of the week, then all the power to you... but more likely than not, it's far from that for most of the workday everyday). 
 - Doing the dishes is boring. 
-- Relaxing after work is nice. But a lot of the time it's boring.
+- Relaxing after work is nice. But you only get such little time for it.
 
-It's different for everyone, yes, but some part of life always remains mundane. I wouldn't believe anyone who says that they enjoy every single moment of their day (if everything is enjoyable, then nothing is).
+It's different for everyone, yes, but some part of life always remains mundane.
 
-The worst part is: *it doesn't stop*. The boring parts of life continue day-in, day-out, for the rest of your adult life (the kids have it good, but they're not old enough to realize that yet).
+The worst part is: *it doesn't stop*. 
+
+The boring parts of life continue day-in, day-out, for the rest of your adult life (the kids have it good, but they're not old enough to realize that yet).
 
 **We spend most of our lives doing things we don't want to do.**
 
 ---
 
-## There's nothing stopping you from making the mundane things in life more fun
+It's bit of a bleak thought, innit? 
 
-I was scrolling mindlessly on Reddit the other day, going through the assortment of news, memes, and random posts from the subreddits I follow (mainly tech, local, and some hobbies), when I came across a post that (out of absolute nowhere) brightened my day.
+We only have such little time to do the things we like.
 
-I came across a Reddit post a few weeks ago that did something social media rarely does for me: it absolutely brightened my day.
+**But that doesn't mean we can't learn to like doing the boring bits.**
 
-I saved the link as soon as I opened that post, because I knew that it was something worth saving. 
+---
 
-I was curious and wanted to see if I could find the post from looking . I was curious and checked out the top posts in that subreddit too. well, turns out that post already became the all-time top post in that subreddit in less than a month. Go figure. Just goes to show that everyone is looking for a little more whimsy in their life.
+## You gotta make sh*t whimsical sometimes
 
-https://www.reddit.com/r/justgalsbeingchicks/comments/1izgy5a/you_gotta_make_sht_whimsical_sometimes/
+I came across this post the other day on Reddit, something that really brightened my day out of nowhere and inspired me to write this post in the first place:
 
-<Callout type="info">
-  As I formally begin ECE496 in September 2025, I'll be updating this timeline with more specific dates, along with experiences and any tips I have for future students taking the course.
+<RedditPost
+  avatar="/path/to/avatar.png"
+  username="u/WizardsAreNeverWrong"
+  subreddit="r/justgalsbeingchicks"
+  date="Thu Feb 27 2025 09:25 GMT"
+  src="https://www.reddit.com/r/justgalsbeingchicks/comments/1izgy5a/you_gotta_make_sht_whimsical_sometimes/"
+  upvotes="63k+"
+  title="You gotta make sh*t whimsical sometimes."
+>
+  My name is Cara, but I scold myself as “Carol” in a midwestern accent whenever I do something dumb. “Goddamnit Carol!”
+</RedditPost>
+
+<div class="w-[120%] mx-auto relative left-1/2 -translate-x-1/2">
+<Marquee transform="translateY(0px)" reviews={[
+{
+    name: "Grace",
+    body: "I wear matching pajamas every time I change my sheets so I can have what I call fancy sleep",
+},
+{
+    name: "thebloggess",
+    body: "A friend made me joyous taxidermied raccoons out of roadkill and I create happy scenes of them on adventures using American Doll props (to the continued bafflement of my cats and husband).",
+},
+{
+    name: "Kaitlyn Hunt",
+    body: "I hold \"office hours\" every Tuesday at a local coffee shop, which means I sit on the couch and order drinks for 4-5 hours while various friends and acquaintances visit me to yap abt books and gossip.",
+},
+{
+    name: "rene.egg",
+    body: "if I want to have negative thoughts about myself I have to think them in a cockney accent",
+},
+{
+    name: "s y d",
+    body: "I say \"my lady\" whenever i walk by a mirror",
+},
+{
+    name: "unabashedlyerin",
+    body: "I teach the dog how to do things either to make them more interesting for me (\"Let me show you how to start a load of laundry\") or just to make him feel included (\"Do you remember how to make coffee, or should I walk you through it again? I know it's hard to remember since you can't practice without thumbs.\")",
+},
+{
+    name: "Lexis",
+    body: "I tell my dishes it's bath time",
+},
+{
+    name: "Car",
+    body: "I like drinking water at night out of small wooden bowls. It makes me feel like I'm being nursed back to health by spirits",
+},
+{
+    name: "Kat",
+    body: "I tell my hamster not to answer the door for anyone before I leave",
+},
+{
+    name: "lawlessmcgee",
+    body: "I wash dishes by candlelight, listening to Medieval tavern music, and pretend I'm a tavern wench.",
+},
+{
+    name: "oi dipsh t",
+    body: "\"can you hold this please\" when i set my phone on an inanimate object",
+},
+{
+    name: "leaturnerholt",
+    body: "I call my to do list my TA DA list and do jazz hands as I tick things off.",
+},
+{
+    name: "Josie",
+    body: "I say \"well good thing no one overreacted\" out loud to myself after a good cry",
+},
+{
+    name: "caitlincc7",
+    body: "Oooooh love these! I'll add one: whenever I buy something online and it asks \"is this a gift?\" I write a little gift message to myself, usually along the lines of \"you are awesome and deserve these little treats.\"",
+},
+{
+    name: "candymandingo",
+    body: "When I leave the house I always tell my dog \"no parties while I'm gone!\" And then laugh so he knows he is 100% allowed to throw parties if he wants.",
+},
+]} />
+</div>
+
+There's nothing stopping you from doing whatever you can to make the mundane things in life more fun.
+
+You don't need permission to inject joy into ordinary moments. Life is entirely too short to wait for the right time to feel silly, playful, or even just gently amused by your daily routine. We often assume there's a secret trick to happiness, but maybe the secret is simpler: choose to smile at the boring bits.
+
+- **Walking to work?** Give your route names inspired by medieval adventures: "Crossing the Bridge of Boredom," "Passing through the Forest of Stoplights," or "Escaping the Dungeon of the Crowded Bus."
+
+- **Laundry day?** Narrate your chores like you're hosting a home makeover show. "Next up on 'Extreme Laundry Makeover,' will these socks finally reunite? Stay tuned to find out!"
+
+- **Paying bills?** Pretend you're a powerful lord or lady generously bestowing wealth upon humble service providers in your kingdom, signing checks with a flourish and perhaps a wax seal if you're feeling particularly regal.
+
+### Whimsy doesn't have to be loud or elaborate
+
+It can be as subtle as deciding that your morning coffee isn't just coffee; it's your personal, magical elixir crafted by an alchemist (you) in your cozy kitchen-lab.
+
+Or just throw your socks in the laundry basket like you're shooting nothing but net.
+
+We have the unique ability to reshape our relationship with daily drudgery into something richer. It's not some lifelong commitment, or some grand way of deriving meaning from life. 
+
+**It's just a choice to have a bit of fun in the moment.**
+
+
+<Callout type="info" icon="lucide:message-square-quote">
+  ***“Life moves pretty fast. If you don't stop and look around once in a while, you could miss it.”***
+  <br class="mb-2"/>— [Ferris Bueller’s Day Off](https://www.imdb.com/title/tt0091042/)
 </Callout>
-
-
-The engineering capstone design project course (ECE496) is arguably the most important course you'll take in your entire undergrad at UofT Engineering, let alone in your final year. It's a year-long course that runs from September to April and is an opportunity for you to work on a real-world engineering project from idea formation to (hopefully) a working established prototype.
-
-There's not much information available online about what the course is actually like, so I've decided to share a comprehensive timeline of what the ECE496 experience is like from my 4th year of engineering undergrad.
